Fixed ':first-child' pseudo-class and added ':last-child', ':only-child' and ':nth-child()'

--- a/jstyleparser/pom.xml
+++ b/jstyleparser/pom.xml
@@ -110,6 +110,8 @@
           <patches>
             <patch>saxon.patch</patch>
             <patch>fixes.patch</patch>
+            <patch>new_features.patch</patch>
+            <patch>antlr_generated.patch</patch>
           </patches>
         </configuration>
         <executions>
