--- a/brailleutils/catalog/pom.xml
+++ b/brailleutils/catalog/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>brailleutils-catalog</artifactId>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0-beta</version>
   <packaging>bundle</packaging>
 
   <name>Braille Utils Catalog</name>
@@ -65,7 +65,7 @@
   </dependencies>
 
   <scm>
-    <connection>scm:svn:http://brailleutils.googlecode.com/svn/trunk/braille/catalog</connection>
+    <connection>scm:svn:http://brailleutils.googlecode.com/svn/tags/release_1.2_beta/catalog</connection>
   </scm>
 
   <build>
