--- a/brailleutils/core/pom.xml
+++ b/brailleutils/core/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>brailleutils-core</artifactId>
-  <version>1.2.0-beta</version>
+  <version>1.2.0-beta-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Braille Utils</name>
