--- a/jstyleparser/pom.xml
+++ b/jstyleparser/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>jstyleparser</artifactId>
-  <version>1.7.0-p1-SNAPSHOT</version>
+  <version>1.7.0-p2-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>jStyleParser</name>
@@ -112,6 +112,7 @@
             <patch>fixes.patch</patch>
             <patch>new_features.patch</patch>
             <patch>antlr_generated.patch</patch>
+            <patch>uriresolver.patch</patch>
           </patches>
         </configuration>
         <executions>
