--- a/jstyleparser/pom.xml
+++ b/jstyleparser/pom.xml
@@ -97,6 +97,12 @@
             <configuration>
               <connectionType>connection</connectionType>
               <checkoutDirectory>${basedir}/target/sources/cz</checkoutDirectory>
+              <excludes>
+                **/CSSLexer.java,
+                **/CSSParser.java,
+                **/CSSTreeParser.java,
+                **/*.tokens
+              </excludes>
             </configuration>
           </execution>
         </executions>
@@ -111,7 +117,6 @@
             <patch>saxon.patch</patch>
             <patch>fixes.patch</patch>
             <patch>new_features.patch</patch>
-            <patch>antlr_generated.patch</patch>
             <patch>uriresolver.patch</patch>
           </patches>
         </configuration>
@@ -122,6 +127,21 @@
             <goals>
               <goal>apply</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.antlr</groupId>
+        <artifactId>antlr3-maven-plugin</artifactId>
+        <version>3.1.3-1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>antlr</goal>
+            </goals>
+            <configuration>
+              <sourceDirectory>${basedir}/target/sources</sourceDirectory>
+            </configuration>
           </execution>
         </executions>
       </plugin>
