--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,16 @@ target/
 .project
 .settings/
 
+# OS Files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
 #vim files
 .*.sw?
 .*~
