Fix the ant invoke POM goal of the release profile

--- a/jing-from-source/pom.xml
+++ b/jing-from-source/pom.xml
@@ -240,7 +240,7 @@
             </executions>
             <configuration>
               <executable>${project.build.directory}/checkout/ant</executable>
-              <commandlineArgs>srczip javadoc</commandlineArgs>
+              <commandlineArgs>jing-dist</commandlineArgs>
               <workingDirectory>${project.build.directory}/checkout</workingDirectory>
             </configuration>
           </plugin>
