--- a/jing/pom.xml
+++ b/jing/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>jing</artifactId>
-  <version>20120724.0.0</version>
+  <version>20120724.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Jing</name>
@@ -31,7 +31,7 @@
   <scm>
     <connection>scm:svn:http://jing-trang.googlecode.com/svn/trunk/</connection>
     <url>http://code.google.com/p/jing-trang/source/browse/</url>
-    <tag>jing-20120724.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <developers>
     <developer>
