--- a/dotify/dotify-translator/pom.xml
+++ b/dotify/dotify-translator/pom.xml
@@ -43,9 +43,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.daisy.libs</groupId>
+      <groupId>se.tpb</groupId>
       <artifactId>texhyphj</artifactId>
-      <version>1.1</version>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.ibm.icu</groupId>
@@ -127,5 +127,15 @@
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <!-- Remove when texhyphj is in sonatype-nexus-snapshots-->
+    <repository>
+      <id>bertfrees-github-snapshots</id>
+      <url>http://bertfrees.github.com/snapshots</url>
+      <releases><enabled>false</enabled></releases>
+      <snapshots><enabled>true</enabled></snapshots>
+    </repository>
+  </repositories>
 
 </project>
