--- a/dotify/dotify-translator/pom.xml
+++ b/dotify/dotify-translator/pom.xml
@@ -43,9 +43,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>se.tpb</groupId>
+      <groupId>com.googlecode.texhyphj</groupId>
       <artifactId>texhyphj</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>com.ibm.icu</groupId>
