--- a/calabash/pom.xml
+++ b/calabash/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>com.xmlcalabash</artifactId>
-  <version>1.0.8</version>
+  <version>1.0.9-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>XML Calabash</name>
@@ -184,8 +184,4 @@
       </build>
     </profile>
   </profiles>
-
-  <scm>
-    <tag>com.xmlcalabash-1.0.8</tag>
-  </scm>
 </project>
