--- a/saxon/pom.xml
+++ b/saxon/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>saxon-he</artifactId>
-  <version>9.4.0.7</version>
+  <version>9.4.0.8-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Saxon HE (OSGi Bundle)</name>
@@ -174,8 +174,4 @@
       </build>
     </profile>
   </profiles>
-
-  <scm>
-    <tag>saxon-he-9.4.0.7</tag>
-  </scm>
 </project>
