--- a/calabash/pom.xml
+++ b/calabash/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>com.xmlcalabash</artifactId>
-  <version>1.0.9-SNAPSHOT</version>
+  <version>1.0.9</version>
   <packaging>jar</packaging>
 
   <name>XML Calabash</name>
@@ -184,4 +184,8 @@
       </build>
     </profile>
   </profiles>
+
+  <scm>
+    <tag>com.xmlcalabash-1.0.9</tag>
+  </scm>
 </project>
