--- a/brailleutils/core/pom.xml
+++ b/brailleutils/core/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>brailleutils-core</artifactId>
-  <version>1.2.0-beta-SNAPSHOT</version>
+  <version>1.2.0</version>
   <packaging>bundle</packaging>
 
   <name>Braille Utils</name>
@@ -75,7 +75,7 @@
   </dependencies>
 
   <scm>
-    <connection>scm:svn:http://brailleutils.googlecode.com/svn/tags/release_1.2_beta/src</connection>
+    <connection>scm:svn:http://brailleutils.googlecode.com/svn/tags/release_1.2/src</connection>
   </scm>
 
   <build>
