--- a/brailleutils/catalog/pom.xml
+++ b/brailleutils/catalog/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>brailleutils-catalog</artifactId>
-  <version>1.2.0</version>
+  <version>1.2.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Braille Utils Catalog</name>
