[maven-release-plugin] prepare release brailleutils-core-1.2.0

--- a/brailleutils/core/pom.xml
+++ b/brailleutils/core/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -9,12 +7,12 @@
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
     <version>2</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>brailleutils-core</artifactId>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
   <packaging>bundle</packaging>
 
   <name>Braille Utils</name>
@@ -76,6 +74,7 @@
 
   <scm>
     <connection>scm:svn:http://brailleutils.googlecode.com/svn/tags/release_1.2/src</connection>
+    <tag>brailleutils-core-1.2.0</tag>
   </scm>
 
   <build>
