--- a/brailleutils/catalog/pom.xml
+++ b/brailleutils/catalog/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -9,12 +7,12 @@
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
     <version>2</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>brailleutils-catalog</artifactId>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
   <packaging>bundle</packaging>
 
   <name>Braille Utils Catalog</name>
@@ -60,12 +58,13 @@
     <dependency>
       <groupId>org.daisy.libs</groupId>
       <artifactId>brailleutils-core</artifactId>
-      <version>${project.version}</version>
+      <version>1.2.0</version>
     </dependency>
   </dependencies>
 
   <scm>
     <connection>scm:svn:http://brailleutils.googlecode.com/svn/tags/release_1.2/catalog</connection>
+    <tag>brailleutils-catalog-1.2.0</tag>
   </scm>
 
   <build>
