--- a/calabash/pom.xml
+++ b/calabash/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>com.xmlcalabash</artifactId>
-  <version>1.0.10-SNAPSHOT</version>
+  <version>1.0.9-2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>XML Calabash</name>
@@ -29,7 +29,7 @@
   </licenses>
 
   <properties>
-      <calabash.source.url>https://github.com/ndw/xmlcalabash1/archive/v1.0.9.94.zip</calabash.source.url>
+    <calabash.source.url>https://github.com/ndw/xmlcalabash1/archive/v1.0.9.94.zip</calabash.source.url>
   </properties>
 
   <dependencies>
