--- a/commons-httpclient/pom.xml
+++ b/commons-httpclient/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>commons-httpclient</artifactId>
-  <version>3.1.0.1-SNAPSHOT</version>
+  <version>3.1.0-2-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Apache Commons HTTP Client (OSGi bundle)</name>
