--- a/jsslutils/pom.xml
+++ b/jsslutils/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.daisy.libs</groupId>
   <artifactId>jsslutils</artifactId>
-  <version>1.0.7-p1-SNAPSHOT</version>
+  <version>1.0.7-2-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>jSSLutils</name>
   <url>http://www.jsslutils.org/</url>
