--- a/jstyleparser/pom.xml
+++ b/jstyleparser/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>jstyleparser</artifactId>
-  <version>1.7.0-p1-SNAPSHOT</version>
+  <version>1.7.0-2-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>jStyleParser</name>
