--- a/servlet-api/pom.xml
+++ b/servlet-api/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>servlet-api</artifactId>
-  <version>2.5.1-SNAPSHOT</version>
+  <version>2.5.0-2-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>JavaServlet(TM) Specification (OSGi Bundle)</name>
