make the projects build on Windows7 (powershell and maven 3.1)

--- a/jstyleparser/pom.xml
+++ b/jstyleparser/pom.xml
@@ -121,6 +121,7 @@
         <artifactId>maven-patch-plugin</artifactId>
         <version>1.1.1</version>
         <configuration>
+		  <optimizations>false</optimizations>
           <patchDirectory>src/main/patches</patchDirectory>
           <patches>
             <patch>uri_resolver.patch</patch>
