--- a/calabash/pom.xml
+++ b/calabash/pom.xml
@@ -124,7 +124,7 @@
                   <fileset dir="${calabash.tmp.dir}">
                     <include name="xmlcalabash1-*/**/*" />
                   </fileset>
-                  <mapper type="regexp" from="^xmlcalabash1-[^/]*/(.*)" to="\1" />
+                  <mapper type="regexp" from="^xmlcalabash1-[^/\\]*[/\\](.*)" to="\1" />
                 </move>
                 <property name="ant.build.javac.source" value="1.5" />
                 <property name="ant.build.javac.target" value="1.5" />
