--- a/jing/pom.xml
+++ b/jing/pom.xml
@@ -14,6 +14,10 @@
   <artifactId>jing</artifactId>
   <version>20120724.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
+  
+  <properties>
+	<jing.ant>ant</jing.ant>
+  </properties>
 
   <name>Jing</name>
   <description>Jing - tool for validating RelaxNG - (OSGi-compatible version)</description>
@@ -136,7 +140,7 @@
             </execution>
           </executions>
           <configuration>
-            <executable>${project.build.directory}/checkout/ant</executable>
+            <executable>${project.build.directory}/checkout/${jing.ant}</executable>
             <workingDirectory>${project.build.directory}/checkout</workingDirectory>
           </configuration>
         </plugin>
@@ -239,7 +243,7 @@
               </execution>
             </executions>
             <configuration>
-              <executable>${project.build.directory}/checkout/ant</executable>
+              <executable>${project.build.directory}/checkout/${jing.ant}</executable>
               <commandlineArgs>jing-dist</commandlineArgs>
               <workingDirectory>${project.build.directory}/checkout</workingDirectory>
             </configuration>
@@ -285,6 +289,17 @@
         </plugins>
       </build>
     </profile>
+	<profile>
+		<activation>
+			<os>
+				<family>Windows</family>
+			</os>
+		</activation>
+		<properties>
+			<jing.ant>ant.bat</jing.ant>
+		</properties>
+	</profile>
+	
   </profiles>
 
 </project>
