* Add the licence info * Change version to mirror the original com4j version * Remove SAPI * Add the profile for building the sonatype package

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <module>mysql</module>
     <module>saxon</module>
     <module>servlet-api</module>
+    <module>com4j</module>
   </modules>
 
 </project>
