--- a/jstyleparser/pom.xml
+++ b/jstyleparser/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>jstyleparser</artifactId>
-  <version>1.13.0-p1</version>
+  <version>1.13.0-p2-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>jStyleParser</name>
@@ -85,7 +85,7 @@
 
   <scm>
     <connection>scm:svn:http://svn.code.sf.net/p/cssbox/jstyleparser/code/tags/1.13/src</connection>
-    <tag>jstyleparser-1.13.0-p1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
