--- a/dotify/dotify-translator/pom.xml
+++ b/dotify/dotify-translator/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -9,12 +7,12 @@
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
     <version>2</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>dotify-translator</artifactId>
-  <version>1.0-alpha1-SNAPSHOT</version>
+  <version>1.0-alpha1</version>
   <packaging>bundle</packaging>
 
   <name>DotifyTranslator</name>
@@ -61,6 +59,7 @@
 
   <scm>
     <connection>scm:svn:http://dotify.googlecode.com/svn/trunk/DotifyTranslator/src</connection>
+    <tag>dotify-translator-1.0-alpha1</tag>
   </scm>
 
   <build>
