--- a/dotify/dotify-translator/pom.xml
+++ b/dotify/dotify-translator/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>dotify-translator</artifactId>
-  <version>1.0-alpha1</version>
+  <version>1.0-alpha2-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>DotifyTranslator</name>
@@ -59,7 +59,7 @@
 
   <scm>
     <connection>scm:svn:http://dotify.googlecode.com/svn/trunk/DotifyTranslator/src</connection>
-    <tag>dotify-translator-1.0-alpha1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
