--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>commons-httpclient</module>
     <module>dotify/dotify-translator</module>
     <module>jing</module>
+    <module>jnaerator</module>
     <module>jsslutils</module>
     <module>jstyleparser</module>
     <module>mysql</module>
