--- a/calabash/pom.xml
+++ b/calabash/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>com.xmlcalabash</artifactId>
-  <version>1.0.9-2-SNAPSHOT</version>
+  <version>1.0.16-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>XML Calabash</name>
@@ -29,19 +29,19 @@
   </licenses>
 
   <properties>
-    <calabash.source.url>https://github.com/ndw/xmlcalabash1/archive/v1.0.9.94.zip</calabash.source.url>
+    <calabash.source.url>https://github.com/ndw/xmlcalabash1/archive/v1.0.16.95.zip</calabash.source.url>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>net.sf.saxon</groupId>
       <artifactId>Saxon-HE</artifactId>
-      <version>9.4.0.7</version>
+      <version>9.5.1-3</version>
     </dependency>
     <dependency>
-      <groupId>commons-httpclient</groupId>
-      <artifactId>commons-httpclient</artifactId>
-      <version>3.1</version>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.2.5</version>
     </dependency>
     <dependency>
       <groupId>com.thaiopensource</groupId>
@@ -128,6 +128,15 @@
                 </move>
                 <property name="ant.build.javac.source" value="1.5" />
                 <property name="ant.build.javac.target" value="1.5" />
+                <delete>
+                  <fileset dir="${project.build.directory}/calabash/src">
+                    <include name="com/xmlcalabash/extensions/Sparql.java"/>
+                    <include name="com/xmlcalabash/extensions/RDFa.java"/>
+                    <include name="com/xmlcalabash/extensions/RDFLoad.java"/>
+                    <include name="com/xmlcalabash/extensions/RDFStep.java"/>
+                    <include name="com/xmlcalabash/extensions/RDFStore.java"/>
+                  </fileset>
+                </delete>
                 <ant dir="${project.build.directory}/calabash" target="jar" />
               </target>
             </configuration>
