--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <module>mysql</module>
     <module>saxon</module>
     <module>servlet-api</module>
-    <module>jnaerator-osgi</module>
+    <module>jnaerator</module>
   </modules>
 
 </project>
