--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script: mvn verify
 
 # if the build succeeds, deploy the artifact (tests are skipped)
 after_success:
-  - git clone -b travis https://github.com/daisy-consortium/maven-parents.git target/travis
+  - git clone -b travis https://github.com/daisy/maven-parents.git target/travis
   - ./target/travis/maven_deploy.sh
 
 # whitelist; only deploy master branch
