--- a/jnaerator/pom.xml
+++ b/jnaerator/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>jnaerator</artifactId>
-  <version>0.11</version>
+  <version>0.11-p1-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>JNAerator (OSGi Bundle)</name>
@@ -161,8 +161,4 @@
       </build>
     </profile>
   </profiles>
-
-  <scm>
-    <tag>jnaerator-0.11</tag>
-  </scm>
 </project>
