--- a/saxon/pom.xml
+++ b/saxon/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.daisy.libs</groupId>
   <artifactId>saxon-he</artifactId>
-  <version>9.5.1.5</version>
+  <version>9.5.1.5-p1-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>Saxon HE (OSGi Bundle)</name>
@@ -175,8 +175,4 @@
       </build>
     </profile>
   </profiles>
-
-  <scm>
-    <tag>saxon-he-9.5.1.5</tag>
-  </scm>
 </project>
