--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,10 @@
     <!-- <module>brailleutils/core</module> -->
     <!-- <module>brailleutils/catalog</module> -->
     <!-- <module>calabash</module> -->
-    <!-- <module>dotify/dotify-translator</module> -->
     <!-- <module>jing</module> -->
     <!-- <module>jnaerator</module> -->
     <!-- <module>jsslutils</module> -->
-    <module>logback-osgi-adapter</module>
+    <!-- <module>logback-osgi-adapter</module> -->
     <!-- <module>mysql</module> -->
     <!-- <module>saxon</module> -->
     <!-- <module>servlet-api</module> -->
