--- a/logback-osgi-adapter/pom.xml
+++ b/logback-osgi-adapter/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.daisy.libs</groupId>
   <artifactId>logback-osgi-adapter</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <name>LogBack OSGi log adapter</name>
   <description>LogListener which binds to slf4j</description>
@@ -55,8 +55,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <scm>
-    <tag>logback-osgi-adapter-1.0.0</tag>
-  </scm>
 </project>
