--- a/logback-osgi-adapter/pom.xml
+++ b/logback-osgi-adapter/pom.xml
@@ -5,11 +5,11 @@
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
     <version>3</version>
-    <relativePath/>
+    <relativePath />
   </parent>
   <groupId>org.daisy.libs</groupId>
   <artifactId>logback-osgi-adapter</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>bundle</packaging>
   <name>LogBack OSGi log adapter</name>
   <description>LogListener which binds to slf4j</description>
@@ -55,4 +55,8 @@
       </plugin>
     </plugins>
   </build>
+
+  <scm>
+    <tag>logback-osgi-adapter-1.0.0</tag>
+  </scm>
 </project>
