--- a/jsass/pom.xml
+++ b/jsass/pom.xml
@@ -12,7 +12,7 @@
   
   <groupId>org.daisy.libs</groupId>
   <artifactId>io.bit3.jsass</artifactId>
-  <version>4.1.0</version>
+  <version>4.1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   
   <dependencyManagement>
