Add markdown libs to aggregator

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
     <!-- <module>jsslutils</module> -->
     <!-- <module>logback-osgi-adapter</module> -->
     <!-- <module>mysql</module> -->
+    <module>parboiled</module>
+    <module>pegdown</module>
     <!-- <module>saxon</module> -->
     <!-- <module>servlet-api</module> -->
   </modules>
