--- a/pegdown/pom.xml
+++ b/pegdown/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
-    <version>3</version>
+    <version>4</version>
     <relativePath/>
   </parent>
   <groupId>org.daisy.libs</groupId>
@@ -77,6 +77,13 @@
             <DynamicImport-Package>*</DynamicImport-Package>
             <_removeheaders>Built-By,Bnd-LastModified,Embed-Dependency,Private-Package</_removeheaders>
           </instructions>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
         </configuration>
       </plugin>
     </plugins>
