--- a/pegdown/pom.xml
+++ b/pegdown/pom.xml
@@ -5,11 +5,11 @@
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
     <version>4</version>
-    <relativePath/>
+    <relativePath />
   </parent>
   <groupId>org.daisy.libs</groupId>
   <artifactId>pegdown</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>bundle</packaging>
   <!--<properties>-->
   <!--<jing.ant>ant</jing.ant>-->
@@ -31,7 +31,7 @@
     <connection>scm:git:https://github.com/sirthias/pegdown</connection>
     <developerConnection>scm:git:https://github.com/sirthias/pegdown</developerConnection>
     <url>https://github.com/sirthias/pegdown</url>
-    <tag>1.6.0</tag>
+    <tag>pegdown-1.0.0</tag>
   </scm>
   <developers>
     <developer>
