[maven-release-plugin] prepare release parboiled-1.0.0

--- a/parboiled/pom.xml
+++ b/parboiled/pom.xml
@@ -5,11 +5,11 @@
     <groupId>org.daisy</groupId>
     <artifactId>daisy</artifactId>
     <version>4</version>
-    <relativePath/>
+    <relativePath />
   </parent>
   <groupId>org.daisy.libs</groupId>
   <artifactId>parboiled</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>bundle</packaging>
   <name>Parboiled</name>
   <description>parboiled is a mixed Java/Scala library providing for lightweight and easy-to-use, yet powerful and elegant parsing of arbitrary input text based on Parsing expression grammars (PEGs). This bundle wraps two different libraries, parboiled-core and parboiled-java, as they offer classes in the same package path</description>
@@ -194,4 +194,8 @@
       </build>
     </profile>
   </profiles>
+
+  <scm>
+    <tag>parboiled-1.0.0</tag>
+  </scm>
 </project>
