calabash: Use jcl-over-slf4j dependency instead of commons-logging

--- a/calabash/pom.xml
+++ b/calabash/pom.xml
@@ -44,11 +44,25 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.2.5</version>
+      <exclusions>
+        <!--
+            replaced by jcl-over-slf4j
+        -->
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <version>1.7.2</version>
     </dependency>
     <!-- optional -->
     <dependency>
