saxon: make service implementations available through Factory methods
(javax.xml.transform.TransformerFactory#newInstance and
javax.xml.xpath.XPathFactory#newInstance) via SPI-Fly.

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <!-- <module>mysql</module> -->
     <module>parboiled</module>
     <module>pegdown</module>
-    <!-- <module>saxon</module> -->
+    <module>saxon</module>
     <!-- <module>servlet-api</module> -->
   </modules>
 
