jing: fix calls to javax.xml.parsers.SAXParserFactory#newInstance
via SPI-Fly

SAXParserFactory#newInstance is called in
- com.thaiopensource.resolver.xml.sax.SAXResolver
- com.thaiopensource.xml.sax.Jaxp11XMLReaderCreator
- com.thaiopensource.datatype.xsd.regex.test.TestDriver

--- a/jing/pom.xml
+++ b/jing/pom.xml
@@ -180,6 +180,7 @@
                   org.iso_relax.*;resolution:=optional,
                   *
                 </Import-Package>
+                <SPI-Consumer>javax.xml.parsers.SAXParserFactory#newInstance</SPI-Consumer>
                 <_removeheaders>Built-By,Bnd-LastModified,Embed-Dependency,Private-Package</_removeheaders>
             </instructions>
           </configuration>
